--- a/project/hospital_microservice/3_backend/patient_service/vercel.json
+++ b/project/hospital_microservice/3_backend/patient_service/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/main.py",
+      "src": "/project/hospital_microservice/3_backend/patient_service/api/main.py",
       "use": "@vercel/python"
     }
   ],
