--- a/project/hospital_microservice/3_backend/patient_service/vercel.json
+++ b/project/hospital_microservice/3_backend/patient_service/vercel.json
@@ -3,16 +3,21 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "api/index.py",
+			"src": "main.py",
 			"use": "@vercel/python"
 		}
 	],
 	"routes": [
 		{
 			"src": "/(.*)",
-			"dest": "api/index.py"
+			"dest": "main.py"
 		}
 	],
+	"functions": {
+		"main.py": {
+			"runtime": "python3.9"
+		}
+	},
 	"env": {
 		"DATABASE_URL": "@DATABASE_URL",
 		"TWILIO_ACCOUNT_SID": "@TWILIO_ACCOUNT_SID",
