--- a/project/hospital_microservice/3_backend/patient_service/vercel.json
+++ b/project/hospital_microservice/3_backend/patient_service/vercel.json
@@ -3,14 +3,14 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "main.py",
+			"src": "index.py",
 			"use": "@vercel/python"
 		}
 	],
 	"routes": [
 		{
 			"src": "/(.*)",
-			"dest": "main.py"
+			"dest": "/"
 		}
 	],
 	"env": {
