Update doctor_service and patient_service from hospital_microservice

--- a/project/doctor_service/requirements.txt
+++ b/project/doctor_service/requirements.txt
@@ -1,10 +1,10 @@
 fastapi
-uvicorn[standard]
-pymongo
+uvicorn
+pymongo[srv]
+certifi
 passlib[bcrypt]
+bcrypt
+python-jose[cryptography]
 pydantic
 python-dotenv
 cryptography
-email-validator
-twilio
-python-jose[cryptography]
