--- a/project/frontend/.env
+++ b/project/frontend/.env
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=http://localhost:5080
-VITE_DOCTOR_API_BASE_URL=http://localhost:5080/doctor
-VITE_ADMIN_API_BASE_URL=http://localhost:5080/admin
+VITE_API_BASE_URL=https://he-thong-quan-ly-benh-vien-patient.onrender.com
+VITE_DOCTOR_API_BASE_URL=https://he-thong-quan-ly-benh-vien-o8kr.onrender.com
+VITE_ADMIN_API_BASE_URL=https://he-thong-quan-ly-benh-vien.onrender.com
