modify FE admin

--- a/project/hospital_microservice/frontend/.env
+++ b/project/hospital_microservice/frontend/.env
@@ -1,3 +1,5 @@
+
+# VITE_API_BASE_URL=https://he-thong-quan-ly-benh-vien-api-gateway.onrender.com
 VITE_API_BASE_URL=http://localhost:5080
-VITE_DOCTOR_API_BASE_URL=http://localhost:5080/doctor
-VITE_ADMIN_API_BASE_URL=http://localhost:5080/admin
+VITE_DOCTOR_API_BASE_URL=http://localhost:8001
+VITE_ADMIN_API_BASE_URL=http://localhost:8002
