--- a/project/doctor_service/requirements.txt
+++ b/project/doctor_service/requirements.txt
@@ -2,8 +2,12 @@ fastapi
 uvicorn
 pymongo[srv]
 certifi
-passlib[bcrypt]
-bcrypt
+
+#passlib[bcrypt]
+#bcrypt
+passlib[bcrypt]==1.7.4
+bcrypt==3.2.2
+
 python-jose[cryptography]
 pydantic
 python-dotenv
