--- a/project/hospital_microservice/frontend/.env
+++ b/project/hospital_microservice/frontend/.env
@@ -3,3 +3,5 @@
 VITE_API_BASE_URL=http://localhost:5080
 VITE_DOCTOR_API_BASE_URL=http://localhost:8001
 VITE_ADMIN_API_BASE_URL=http://localhost:8002
+# VITE_DOCTOR_API_BASE_URL=https://he-thong-quan-ly-benh-vien-o8kr.onrender.com
+# VITE_ADMIN_API_BASE_URL=https://he-thong-quan-ly-benh-vien.onrender.com
